# flanck

./: .gitignore  CMakeLists.txt  FlanckSyntaxHighlighter.h  InterpreterWorkerThread.cpp  MainWindow.cpp  MainWindow.h  OnlyWriteLineEdit.cpp  Readme.md  build.sh  main.cpp
demo/: CMakeLists.txt  addition.flanck  binary_addition.flanck  compile.sh  main.cpp  reverse.flanck  run.sh  run_from_library.sh  run_helloWorld.sh
examples/: addition.flanck  askForInput.flanck  comments.flanck  helloWorld.flanck  neu-flanck.flanck  run_helloWorld.sh  test.flanck
executables/: compile.sh
executables/macos/: flanck
include/flanck/: Interpreter.h  Parser.h  Statement.h  Token.h  flanck.h
interpreter/: CMDInterpreterObserver.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Parser.cpp  Stack.h  Statement.h  Token.h
libary/: CMakeLists.txt
libary/include/: Stack.h
libary/include/flanck/: Lexer.h
libary/src/: Lexer.cpp  Parser.cpp
simple_library/include/: Lexer.h  Stack.h  Token.h  flanck.h
simple_library/src/: Interpreter.cpp
src/: Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Stack.h  Statement.h  Token.h  flanck-config.cmake  flanck.cpp  main.cpp
ui/: InterpreterWorkerThread.cpp  InterpreterWorkerThread.h  MainWindow.cpp  MainWindow.h
ui/widgets/: FlanckSyntaxHighlighter.cpp  OnlyWriteLineEdit.cpp  OnlyWriteLineEdit.h
